@@ -11,6 +11,9 @@ dpkg (1.16.5) UNRELEASED; urgency=low
   * Modify dpkg-source --commit to auto-whitelist modified binary files.
     That way the same command can be used whatever kind of upstream files
     has been modified.
+  * dpkg-source now supports a new option --no-unapply-patches to force
+    patches to be kept applied after build (used by formats "2.0" and "3.0
+    (quilt)"). Closes: #643043
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
